# jpgtools

./: CMakeLists.txt  README.md  build.sh  errorcode.h  jpeg_decoder.h  jpgchannel.cpp  jpgsize.cpp
